-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: repo-lilliput-17, repo-lilliput-21, repo-lilliput
-
Component/s: hotspot
We currently print a warning when a user specifies +UseZGC together with +UseCompactObjectHeaders. We should only print the warning when +UCOH is explicitly enabled at the command-line. This may not be very relevant at the moment, but might be in the future, or in downstreams which may want to enable compact headers by default.