8319524: [Lilliput] Only warn when compact headers are explicitly enabled

Backport-of: 3f73f014097262455cc42a71c32af374b77b6efd